# Bookmyseat-backend

./: .gitignore  README.md  config.py  main.py  pyproject.toml  readme
data/: movie.json  movie_backup.json
database/: db_manager.py
models/: requests.py
prompts/: system_prompts.py
routes/: booking_routes.py
services/: filter_service.py  formatter_service.py  llm_service.py  search_service.py
utils/: constants.py  parsers.py
